# component-onedrive

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: push.yml
component_config/: component_long_description.md  component_short_description.md  configRowSchema.json  configSchema.json  configuration_description.md  documentationUrl.md  licenseUrl.md  sourceCodeUrl.md
data/: config.json
scripts/: build_n_test.sh
src/: component.py  configuration.py  sync_action_configuration.py
src/client/: OneDriveBusiness.py  OneDriveClient.py  SharePointClient.py  __init__.py  async_engine.py  client.py  exceptions.py  onedrive.py
tests/: test_component.py  test_configuration.py  test_wildcards.py
